added more fonts via google fonts

--- a/style.css
+++ b/style.css
@@ -44,4 +44,6 @@ p {
   font-size: 1.4rem;
   line-height: 1.6;
   word-spacing: 0.6rem;
+  font-family: 'Fascinate Inline', cursive;
+  /* font-family: 'Dancing Script', cursive; */
 }
